Fix thumbnail view layout issue
1. Remove dashed line.
2. Refine layout

--- a/viewer/pdf/viewer.css
+++ b/viewer/pdf/viewer.css
@@ -1099,8 +1099,7 @@ html[dir='rtl'] .verticalToolbarSeparator {
   height: 140px;
   width: 100%;
   left: 0;
-  right: 0;
-  bottom: 42px;
+  bottom: 28px;
   background:rgba(54, 54, 54, 0.7);
   -webkit-overflow-scrolling: touch;
 }
@@ -1119,7 +1118,7 @@ html[dir='rtl'] .verticalToolbarSeparator {
 }
 
 .thumbnail:not([data-loaded]) {
-  border: 1px dashed rgba(255, 255, 255, 0.5);
+  border: 1px rgba(255, 255, 255, 0.5);
   margin: -1px -1px 4px -1px;
 }
 
@@ -1133,8 +1132,8 @@ html[dir='rtl'] .verticalToolbarSeparator {
 }
 
 .thumbnailSelectionRing {
-  border-radius: 2px;
-  padding: 7px;
+  border-radius: 1px;
+  padding: 5px;
 }
 
 a:focus > .thumbnail > .thumbnailSelectionRing > .thumbnailImage,
@@ -1862,7 +1861,7 @@ html[dir='rtl'] .twoPageContainer > .page:first-child:not(:only-child) {
 }
 p.index {
     text-align:center;
-    margin-top:2px;
+    margin-top:1px;
 }
 
 
@@ -1874,6 +1873,7 @@ footer.bar {
     width: 100%;
     height: 40;
     background: #5A595B;
+    margin-top: 2px;
     z-index: 2;
 }
 footer.bar a {
@@ -1906,7 +1906,7 @@ footer.bar a.number {
 	color: #fff;
 }
 
-footer.bar .thumbnail {
+footer.bar .thumbnailbtn {
 	right: 5px;
 	width: 10%;
 	height: 32px;
